2009-09-20  Francois Suter  <francois@typo3.org>

	* Fixed bug #12010: Task uid should be displayed BE module list view

2009-09-19  Francois Suter  <francois@typo3.org>

	* Fixed bug #12011: Wrong layout of datepicker

2009-09-15  Francois Suter  <francois@typo3.org>

	* Replaced usage of t3lib_div::getUserObj() by t3lib_div::makeInstance() in the CLI script, resolves #4644
	* Harmonized the use of uppercase and lowercase letters in all class names, resolves #4645
	* Committed to TYPO3 Core

2009-09-14  Francois Suter  <francois@typo3.org>

	* Replaced usage of cal_days_in_month() by date(), resolves #4618
	* Completed the manual, resolves #4398

2009-09-13  Francois Suter  <francois@typo3.org>

	* Added link to create user when _cli_scheduler user doesn't exist, resolves #4571

2009-09-11  Francois Suter  <francois@typo3.org>

	* More improvements to check screen messages, resolves #4570
	* Added test to catch empty tasks registration list, resolves #4572 (thanks to Georg Ringer)
	* Corrected syntax of extension configuration file
	* Changed the "check/uncheck all" checkbox in list view to use TYPO3's standard icon, resolves #4594

2009-09-10  Francois Suter  <francois@typo3.org>

	* Added ExtJS datepicker to edit form date fields, resolves #3663 (thanks to Steffen Kamper)

2009-09-07  Francois Suter  <francois@typo3.org>

	* Removed display of next execution date from list view when task is disabled, resolves #4480
	* Added missing id attribute to checkbox fields in add/edit form, resolves #4468 (thanks to Georg Ringer)
	* Improved wording of error message for invalid frequency, resolves #4474
	* Removed unused variables and corrected one typo, resolves #4481

2009-09-06  Francois Suter  <francois@typo3.org>

	* Follow-up to #4397: changed registry usage to store also type of run. Registry is now used both by manual executions and CLI ones. Display of information moved to check screen in BE module.