@@ -1,6 +1,7 @@
 2009-09-20  Francois Suter  <francois@typo3.org>
 
 	* Fixed bug #12010: Task uid should be displayed BE module list view
+	* Cleanup #12020: Made proper use of t3lib_pageRenderer for all inclusions of JS and CSS files
 
 2009-09-19  Francois Suter  <francois@typo3.org>
 
